Separate internationalisable messages from Strava API config